2004-02-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/sndfont.c:
	  Fix around scale tuning

2004-02-01  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5:
	  Update "(bank|drumset) mapid num" and "#extension copymap"

2004-01-31  mput <root@mput.dip.jp>

	* Makefile.am (EXTRA_DIST): Fix to fit below
	* INSTALL.jp: Move to INSTALL.ja
	* README.jp: Move to README.ja
	* INSTALL: update.
	* README: update.

2004-01-31  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.[ch], timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/timidity.c:
	  New syntax of *.cfg:
	    (bank|drumset) <mapid> <num>
	    #extension copymap <tomap> <frommap>
	  Besides, 'copybank' now copies tunes, envelopes, etc.
	  That should be what it is expected to do.
	* timidity/sysdep.h
	  Fixed a compilation error with MAX_CHANNELS > 32.
	* timidity/freq.c, timidity/sndfont.c
	  Changed error handling of freq_fourier() with cfgforsf.

2004-01-31  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5,
	  timidity/instrum.[ch], timidity/mod2midi.c,
	  timidity/playmidi.c, timidity/smplfile.c,
	  timidity/sndfont.c, timidity/timidity.c:
	  Support for GUS scale tuning
	  Support for scale tuning patch option

2004-01-29  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/readmidi.c:
	  Hack up around find_samples()

2004-01-28  Saito <saito2@digitalme.com>

	* timidity/playmidi.c, timidity/readmidi.c:
	  Fix "TONE MAP-0 NUMBER".
	  Fix around select_play_sample().
	  Fix about modulation wheel depth.

2004-01-27  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/wrd_read.c:
	  Fix bug

2004-01-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* INSTALL(.jp), README(.jp):
	  Update README and INSTALL
	* doc/C/{timidity.1,timidity.cfg.5},
	  doc/ja_JP.ujis/{timidity.1,timidity.cfg.5}:
	  Fix typo

2004-01-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1: